force-app/main/default/objects/Contact_Mapping__mdt/Contact_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Contact Mapping</label>
    <pluralLabel>Contact Mappings</pluralLabel>
</CustomObject>