force-app/main/default/objects/Contact_Mapping__mdt/fields/Outbound_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Mapping__c</fullName>
    <label>Outbound Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>