force-app/main/default/objects/Contact_Mapping__mdt/fields/Rightsline_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Rightsline_Template_Id__c</fullName>
    <label>Rightsline Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>