force-app/main/default/objects/Contact_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>