force-app/main/default/objects/Contact_Mapping__mdt/fields/Salesforce_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object_Record_Type__c</fullName>
    <label>Salesforce Object Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>